fix: adjust modal window layout on mobile

--- a/hangman/css/styles.css
+++ b/hangman/css/styles.css
@@ -36,7 +36,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   height: 100dvh;
-  font: 26px/100% "Dongle", sans-serif;
+  font: 26px/100% 'Dongle', sans-serif;
   gap: 20px;
 }
 
@@ -109,11 +109,11 @@ Secret Word */
   display: flex;
   justify-content: center;
   align-items: center;
-  font: 20px/100% "Mochiy Pop One", sans-serif;
+  font: 20px/100% 'Mochiy Pop One', sans-serif;
 }
 
 .letter::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   width: 100%;
@@ -154,7 +154,7 @@ Secret Word */
   display: flex;
   justify-content: center;
   align-items: center;
-  font: 20px/100% "Mochiy Pop One", sans-serif;
+  font: 20px/100% 'Mochiy Pop One', sans-serif;
 }
 
 .key-char:hover {
@@ -176,7 +176,7 @@ Btn Highlight Correct */
   /* color: #FBA347; */
 
   &::after {
-    content: "";
+    content: '';
     width: 56px;
     height: 56px;
     position: absolute;
@@ -210,7 +210,7 @@ Btn Highlight Correct */
   position: relative;
 
   &::after {
-    content: "";
+    content: '';
     width: 50px;
     height: 50px;
     position: absolute;
@@ -344,7 +344,7 @@ Btn Highlight Correct */
 /* Modal */
 
 .modal-wrapper {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -352,12 +352,13 @@ Btn Highlight Correct */
   z-index: 1;
   top: 0;
   left: 0;
-  font: 26px/100% "Dongle", sans-serif;
+  font: 26px/100% 'Dongle', sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 36px;
+  padding: 16px;
   opacity: 0;
   transition: opacity 0.5s ease;
 }
@@ -401,7 +402,7 @@ Btn Highlight Correct */
 }
 
 .game-info-title {
-  font: 20px/100% "Mochiy Pop One", sans-serif;
+  font: 20px/100% 'Mochiy Pop One', sans-serif;
 }
 
 .btn-play-again {
@@ -411,7 +412,7 @@ Btn Highlight Correct */
   color: var(--text-color);
   /* height: 44px; */
   padding: 14px 16px;
-  font: 16px/120% "Mochiy Pop One", sans-serif;
+  font: 16px/120% 'Mochiy Pop One', sans-serif;
   border: 3px solid rgba(211, 145, 197, 0.3);
   display: block;
   border-radius: 8px;
@@ -473,7 +474,7 @@ Btn Highlight Correct */
     gap: 16px;
   }
   .question-wrapper {
-    font: 20px/100% "Dongle", sans-serif;
+    font: 20px/100% 'Dongle', sans-serif;
   }
   .word-wrapper {
     flex-wrap: wrap;
